@@ -1,10 +1,10 @@
 [tox]
-envlist = py27-{sqlite,postgresql,mysql},pypy-{sqlite,postgresql}
+envlist = {py27,py33,py34,py35}-{sqlite,postgresql,mysql},pypy-{sqlite,postgresql}
 
 [testenv]
 commands = {envpython} setup.py test
 deps =
-    py27-postgresql: psycopg2 >= 2.0
+    {py27,py33,py34,py35}-postgresql: psycopg2 >= 2.0
     pypy-postgresql: psycopg2cffi >= 2.5
     mysql: MySQL-python
 setenv =
